--- a/dist.ini
+++ b/dist.ini
@@ -4,7 +4,8 @@ license = Perl_5
 copyright_holder = Marc Chantreux
 copyright_year   = 2012
 
-; todo: find a way to use $Persec::VERSION
-version = 0.3
-
 [@Basic]
+[AutoPrereqs]
+[ExecDir]
+dir = scripts
+[VersionFromModule]
